--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,9 @@ script_includes:
 {% include toc-status.html %}
 
 <article class="px-1" data-toc="{{ enable_toc }}">
+  <script type="text/javascript" async
+    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+  </script>
   <header>
     <h1 data-toc-skip>{{ page.title }}</h1>
     {% if page.description %}
