--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,11 @@
     name="viewport"
     content="width=device-width, user-scalable=no initial-scale=1, shrink-to-fit=no, viewport-fit=cover"
   >
-
+  <!-- MathJax 추가 -->
+  <script type="text/javascript" async
+  src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script type="text/javascript" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   {%- capture seo_tags -%}
     {% seo title=false %}
   {%- endcapture -%}
